# strela_iree

./: .gitmodules  build.sh  matmul.mlir  setup_env.sh  test.sh  test_remote.sh
src/: CMakeLists.txt  arm_toolchain.cmake  custom_module.cc  iree_compiler_plugin.cmake  my_plugin.cc
